
@startuml

class Event {
    long id
    Year year
    String name
    String information
    Set<UserEvent> users
    int attendanceValue
}

class Hall {
    long id
    String name
}

class Position {
    long id
    String name
}

class Role {
    long id
    String name
}

class User {
    long id
    String firstName
    String lastName
    String firstNameCyr
    String lastNameCyr
    String password
    String badgeName
    String badgeNameCyr
    String email
    Role role
}

class UserEvent {
    long id
    ApplicationForm
    Event event
    Position position
    Hall hall
    Attendance attendance
}

enum Attendance {
    YES
    NO
    LATE
    SICK
}

class ApplicationForm {
    long id
    User user
    Year year
    Set<Position> positions //желаемые позиции
    String suggestions
    String group
}

class Year {
    long id
    String name
    Set<ApplicationFrom> users // who signed up for this year
    Set<Event> events
    boolean current // if true then user can sign up for this year
    boolean open // if true then user can see information about this year
}

class Medal {
    int id
    string name
    int value
}

class PositionValue {
    int id
    Position position
    int value
    Year year
}

class UserEventAssessment {
    int id
    String comment
    int value
}

User --> Role : role
ApplicationForm "one" --> "many" Position : positions
ApplicationForm --> User : user
Year "one" --> "many" ApplicationForm : users
Year "one" --> "many" Event : events


ApplicationForm --> Year : year

UserEvent --> ApplicationForm : userYear
UserEvent --> Hall : hall
UserEvent --> Position : position
UserEvent --> Event : event
UserEvent --> Attendance : attendance

PositionValue --> Position : position

Event "one" --> "many" UserEvent : users
Event "many" --> "one" Year : year


@enduml